service-users/k8s/manifest-files/base/deployment.yaml
# GENERATED FROM: templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-users
spec:
  selector:
    matchLabels:
      app: service-users
  replicas: 1
  template:
    metadata:
      labels:
        app: service-users
    spec:
      containers:
      - name: service-users
        image: localhost:5000/service-users:25
        ports:
        - containerPort: 3333
